--- a/rootfs/etc/supervisor/supervisord.conf
+++ b/rootfs/etc/supervisor/supervisord.conf
@@ -1,18 +1,22 @@
 [supervisord]
 user=root
 nodaemon=true
-logfile=/dev/null
-logfile_maxbytes=0
 pidfile=/tmp/supervisord.pid
 
 [program:rsyslog]
-priority=1
+priority=10
 command=/usr/sbin/rsyslogd -n
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
 
 [program:sshd]
-priority=10
-command=/usr/sbin/sshd -D -e
+priority=20
+command=/usr/sbin/sshd -D
+
+[program:fail2ban]
+priority=30
+command=python3 /usr/bin/fail2ban-server -f -s /var/run/fail2ban/fail2ban.sock
+
+[program:stdout]
+priority=999
+command=tail -f /var/log/messages
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
